--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
     <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
 
-
     <script>
       // Your web app's Firebase configuration
-      //Add here
+      var firebaseConfig = {
+        apiKey: "AIzaSyDWr1gGv2-BL3s3wZySrgO7mB2TttAg7UI",
+        authDomain: "racing-car-mp.firebaseapp.com",
+        databaseURL: "https://racing-car-mp.firebaseio.com",
+        projectId: "racing-car-mp",
+        storageBucket: "racing-car-mp.appspot.com",
+        messagingSenderId: "64176031185",
+        appId: "1:64176031185:web:eb59371f76547ba228ccf0"
+      };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
